--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="hd-box">  
                 <h1>Ahmed Refaat Abouzeid</h1>
                 <h3 style="color: orangered ;">Software Engineer</h3>
-                <p id="summary">
+                <p id="summary" style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;">
                     Software engineer eager to contribute to the team's success. Attention to detail
                     and excellent Organizational skills. Clear understanding of fundamental of software design,
                     development, testing, and Maintenance. Motivated to lead, grow and excel in the tech industry.
