--- a/index.html
+++ b/index.html
@@ -85,14 +85,15 @@
 
         <div class=" experience box">
             <h2>EXPERIENCE</h2>
-            <h3>Software Engineer<small> (09/2016 - 07/2022)</small></h3>
+            <h3>User Interface (UI) and User Experience (UX) designer<small> (07/2021 - 08/2021)</small></h3>
             <h5>Egyptian Chinese University</h5>
-            <p style="margin: -12px 0px 0px 25px;">- Participation for developing a Registration System for the university.</p>
-            <p>- Writing more than 500 lines of code using NetBeans.</p> 
-            <p>- Created tables and procedures in the database using MySQL.</p> 
-            <p>- Writing SQL queries to insert and retrieve data in the database using MySQL.</p>
+            <p style="margin: -12px 0px 0px 25px;">- Create a more than 9 projects using Adobe XD.</p>
+            <p>- Creation of adjustable grid-based screens and create adjustable lists using Adobe XD.</p> 
+            <p>- Apply usability principles to heuristic evaluation of product designs.</p> 
+            <p>- Creating a responsive designs using Adobe XD.</p>
+            <p>- Use design principles to identify user-friendly..</p>
             <br> 
-            <h3>Software Engineer<small> (09/2016 - 07/2022)</small></h3>
+            <h3>Software Engineer<small> (08/2020 - 09/2020)</small></h3>
             <h5>Egyptian Chinese University</h5>
             <p style="margin: -12px 0px 0px 25px;">- Participation for developing a Registration System for the university.</p>
             <p>- Writing more than 500 lines of code using NetBeans.</p> 
