--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
             <p>- Created tables and procedures in the database using MySQL.</p> 
             <p>- Writing SQL queries to insert and retrieve data in the database using MySQL.</p>
             <br>
-            <h3>Software Engineer<small> (09/2016 - 07/2022)</small></h3>
-            <h5>Egyptian Chinese University</h5>
-            <p style="margin: -12px 0px 0px 25px;">- Participation for developing a Registration System for the university.</p>
-            <p>- Writing more than 500 lines of code using NetBeans.</p> 
-            <p>- Created tables and procedures in the database using MySQL.</p> 
-            <p>- Writing SQL queries to insert and retrieve data in the database using MySQL.</p>
+            <h3>Graphic Designer:<small> (07/2018 - 08/2018)</small></h3>
+            <h5>Egyptian Ministry of Civil Aviation</h5>
+            <p style="margin: -12px 0px 0px 25px;">Create a more than 7 projects using Adobe Photoshop and Adobe 
+                Illutrator.</p>
+            <p>- learn and Apply tools in Illutrator (eg the Selections, Ellipse, Color  and Polygon Tools).</p> 
+            <p>- learn and Apply tools in Photoshop (eg the Selections, Brush, Spot Healing and  Clone Stamp Tools).</p> 
         </div>
 
             <!-----------------------------certificates Section------------------------->
