--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <br>
             <h3>Graphic Designer:<small> (07/2018 - 08/2018)</small></h3>
             <h5>Egyptian Ministry of Civil Aviation</h5>
-            <p style="margin: -12px 0px 0px 25px;">Create a more than 7 projects using Adobe Photoshop and Adobe 
+            <p style="margin: -12px 0px 0px 25px;">- Create a more than 7 projects using Adobe Photoshop and Adobe 
                 Illutrator.</p>
             <p>- learn and Apply tools in Illutrator (eg the Selections, Ellipse, Color  and Polygon Tools).</p> 
             <p>- learn and Apply tools in Photoshop (eg the Selections, Brush, Spot Healing and  Clone Stamp Tools).</p> 
